--- a/BlanketShop/Views/Home/Index.cshtml
+++ b/BlanketShop/Views/Home/Index.cshtml
@@ -64,6 +64,7 @@
 }
 
 <div class="content">
+    Tuyen
     <div class="content_top" style="background: #44c344;">
         <div class="heading">
             <h3 style="font-family:sans-serif;">Sản phẩm mới</h3>
