--- a/BlanketShop/Views/Home/Index.cshtml
+++ b/BlanketShop/Views/Home/Index.cshtml
@@ -64,8 +64,7 @@
 }
 
 <div class="content">
-    Tuyen
-    <div class="content_top" style="background: #44c344;">
+    <div class="content_top" style="background: #e89f659c;">
         <div class="heading">
             <h3 style="font-family:sans-serif;">Sản phẩm mới</h3>
         </div>
@@ -97,7 +96,7 @@
         }
     </div>
 
-    <div class="content_bottom" style="background: #44c344;">
+    <div class="content_bottom" style="background: #e89f659c;">
         <div class="heading">
             <h3 style="font-family:sans-serif;">Sản phẩm hot</h3>
         </div>
