--- a/BlanketShop/Views/Shared/Footer.cshtml
+++ b/BlanketShop/Views/Shared/Footer.cshtml
@@ -1,4 +1,4 @@
-﻿<footer>
+﻿@*<footer>
     <div class="splitter"></div>
     <ul>
         <li>
@@ -29,46 +29,121 @@
             </div>
         </li>
     </ul>
-
-    @*<div class="bar">
-            <div class="bar-wrap">
-                <ul class="links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">License</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Advertise</a></li>
-                    <li><a href="#">About</a></li>
-                </ul>
-
-                <div class="social">
-                    <a href="#" class="fb">
-                        <span data-icon="f" class="icon"></span>
-                        <span class="info">
-                            <span class="follow">Become a fan Facebook</span>
-                            <span class="num">9,999</span>
-                        </span>
-                    </a>
-
-                    <a href="#" class="tw">
-                        <span data-icon="T" class="icon"></span>
-                        <span class="info">
-                            <span class="follow">Follow us Twitter</span>
-                            <span class="num">9,999</span>
-                        </span>
-                    </a>
-
-                    <a href="#" class="rss">
-                        <span data-icon="R" class="icon"></span>
-                        <span class="info">
-                            <span class="follow">Subscribe RSS</span>
-                            <span class="num">9,999</span>
-                        </span>
-                    </a>
+</footer>*@
+<div class="footer">
+    <div class="footer-content clearfix">
+        <div class="footer-top hidden-sm hidden-xs">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3"></div>
+                    <div class="footer-box col-md-3 hotline col-sm-12 col-xs-12">HOTLINE: 0969012033</div>
+                    <div class="footer-box box-social col-md-3 col-sm-12 col-xs-12">
+                        <div class="item">
+                            <div class="social-icon">
+                                <ul>
+                                    <li><a target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                                    <li><a href="https://www.facebook.com/runtime.vn" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a target="_blank"><i class="fa fa-youtube"></i></a></li>
+                                    <li><a target="_blank"><i class="fa fa-twitter "></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer-box col-md-3 button-contact">
+                        <a class="btn">Hợp tác với chúng tôi</a>
+                    </div>
                 </div>
-                <div class="clear"></div>
-                <div class="copyright">&copy;  Chăn ga gối đệm Everon</div>
             </div>
-        </div>*@
-</footer>
-
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="footer-box box-address col-md-3 col-sm-12 col-xs-12">
+                    <div class="item">
+                        <div class="clearfix">
+                            <a href="/">
+                                <img src="~/Assets/client/images/logo/1.png" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="box-address-content">
+                            <b>Đàm Quang Tuyển</b>
+                            <p><i class="fa fa-map-marker"></i> Hưng Yên</p>
+                            <p>
+                                <i class="fa fa-envelope"></i>
+                                <a href="mailto:info@runtime.vn">info@runtime.vn</a>
+                            </p>
+                            <p>
+                                <i class="fa fa-phone"></i>
+                                Phone: 0969012033
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-box col-md-3 col-sm-12 col-xs-12">
+                    <div class="item">
+                        <h3>
+                            <span>Về ch&#250;ng t&#244;i</span>
+                        </h3>
+                    </div>
+                    <ul>
+                        <li>
+                            <a href="/gioi-thieu.html">
+                                Giới thiệu
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/content/giao-hang-doi-tra.html">
+                                Giao h&#224;ng - Đổi trả
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/content/chinh-sach-bao-mat.html">
+                                Ch&#237;nh s&#225;ch bảo mật
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/lien-he.html">
+                                Li&#234;n hệ
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-box col-md-3 col-sm-12 col-xs-12">
+                    <div class="item">
+                        <h3>
+                            <span>Trợ gi&#250;p</span>
+                        </h3>
+                    </div>
+                    <ul>
+                        <li>
+                            <a href="/content/huong-dan-mua-hang.html">
+                                Hướng dẫn mua h&#224;ng
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/content/huong-dan-thanh-toan.html">
+                                Hướng dẫn thanh to&#225;n
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/content/tai-khoan-giao-dich.html">
+                                T&#224;i khoản giao dịch
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-box box-social col-md-3 col-sm-12 col-xs-12">
+                    <div class="item">
+                        <h3>
+                            Facebook
+                        </h3>
+                        <div class="fb-like-box" data-href="https://www.facebook.com/runtime.vn" data-width="289"
+                             data-height="190" data-colorscheme="dark" data-show-faces="true" data-header="false"
+                             data-stream="false" data-show-border="false">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
