--- a/BlanketShop/Views/Shared/HeaderCart.cshtml
+++ b/BlanketShop/Views/Shared/HeaderCart.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="cart">
     <p>
-        <span style="color:mintcream;font-size:139%;">Giỏ hàng:</span><div id="dd" class="wrapper-dropdown-2" style="color: lightyellow;">
+        <span style="color:#ff5400;font-size:139%;">Giỏ hàng:</span><div id="dd" class="wrapper-dropdown-2" style="color: #ff5400;">
             @Model.Count sản phẩm
             @if (Model.Count > 0)
             {
