--- a/BlanketShop/Assets/client/css/bootstrap.css
+++ b/BlanketShop/Assets/client/css/bootstrap.css
@@ -1366,7 +1366,7 @@ a.text-warning:focus {
   color: #66512c;
 }
 .text-danger {
-  color: #a94442;
+  color: #e3dec1;
 }
 a.text-danger:hover,
 a.text-danger:focus {
@@ -2878,10 +2878,10 @@ select[multiple].input-lg {
 .has-error.checkbox label,
 .has-error.radio-inline label,
 .has-error.checkbox-inline label {
-  color: #a94442;
+  color: #e3dec1;
 }
 .has-error .form-control {
-  border-color: #a94442;
+  border-color: #e3dec1;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 }
@@ -2891,12 +2891,12 @@ select[multiple].input-lg {
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
 }
 .has-error .input-group-addon {
-  color: #a94442;
+  color: #e3dec1;
   background-color: #f2dede;
-  border-color: #a94442;
+  border-color: #e3dec1;
 }
 .has-error .form-control-feedback {
-  color: #a94442;
+  color: #e3dec1;
 }
 .has-feedback label ~ .form-control-feedback {
   top: 25px;
@@ -5135,7 +5135,7 @@ a.thumbnail.active {
   color: #66512c;
 }
 .alert-danger {
-  color: #a94442;
+  color: #e3dec1;
   background-color: #f2dede;
   border-color: #ebccd1;
 }
@@ -5457,12 +5457,12 @@ button.list-group-item-warning.active:focus {
   border-color: #8a6d3b;
 }
 .list-group-item-danger {
-  color: #a94442;
+  color: #e3dec1;
   background-color: #f2dede;
 }
 a.list-group-item-danger,
 button.list-group-item-danger {
-  color: #a94442;
+  color: #e3dec1;
 }
 a.list-group-item-danger .list-group-item-heading,
 button.list-group-item-danger .list-group-item-heading {
@@ -5472,7 +5472,7 @@ a.list-group-item-danger:hover,
 button.list-group-item-danger:hover,
 a.list-group-item-danger:focus,
 button.list-group-item-danger:focus {
-  color: #a94442;
+  color: #e3dec1;
   background-color: #ebcccc;
 }
 a.list-group-item-danger.active,
@@ -5482,8 +5482,8 @@ button.list-group-item-danger.active:hover,
 a.list-group-item-danger.active:focus,
 button.list-group-item-danger.active:focus {
   color: #fff;
-  background-color: #a94442;
-  border-color: #a94442;
+  background-color: #e3dec1;
+  border-color: #e3dec1;
 }
 .list-group-item-heading {
   margin-top: 0;
@@ -5822,7 +5822,7 @@ button.list-group-item-danger.active:focus {
   border-color: #ebccd1;
 }
 .panel-danger > .panel-heading {
-  color: #a94442;
+  color: #e3dec1;
   background-color: #f2dede;
   border-color: #ebccd1;
 }
@@ -5831,7 +5831,7 @@ button.list-group-item-danger.active:focus {
 }
 .panel-danger > .panel-heading .badge {
   color: #f2dede;
-  background-color: #a94442;
+  background-color: #e3dec1;
 }
 .panel-danger > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #ebccd1;
