--- a/BlanketShop/Assets/client/css/style.css
+++ b/BlanketShop/Assets/client/css/style.css
@@ -187,7 +187,7 @@ body {
 	color: #fff;
 	display:block;
 	padding:16px 20px;
-	border-right: 2px ridge #585858;
+	border-right: 2px ridge #bd3a405e;
     -webkit-transition: all .9s;
    -moz-transition: all .9s;
    -o-transition: all .9s;
