--- a/BlanketShop/Views/Shared/ProductCategory.cshtml
+++ b/BlanketShop/Views/Shared/ProductCategory.cshtml
@@ -9,8 +9,8 @@
 </style>
 <ul style="font-size: 18px;
 
-    background: #4faa1c;" >
-    <h3 style="font-family:sans-serif;background: #456135;text-align: center;padding: 3%;
+    background: #e89f65;" >
+    <h3 style="font-family:sans-serif;background: #2e6da426;text-align: center;padding: 3%;
     font-weight: bold;
     color: #fefefd;
     font-size: 20px;">
@@ -22,16 +22,16 @@
         // var parentClass = child.Count() > 0 ? "class=dropdown-toggle data-toggle=dropdown" : "";
         <li class="dropdown">
             <a href="/san-pham/@item.MetaTitle-@item.ID" style="color: white;
-    font-family: sans-serif;border-bottom: 1px solid #44852b;    text-transform: capitalize;
+    font-family: sans-serif;text-transform: capitalize;
     font-size: 95%;">@item.Name</a><span class="expand submenu"></span>
     @if (child.Count() > 0)
     {
-        <ul class="dropdown-menu" style="margin-left: 100%;margin-top: -29px;background: #4faa1c;"  >
+        <ul class="dropdown-menu" style="margin-left: 100%;margin-top: -29px;background: #e89f65;"  >
             @foreach (var childItem in child)
                     {
                 <li><a href="/san-pham/@childItem.MetaTitle-@childItem.ID" style="font-family: sans-serif;
     color: white;
-    background: #4faa1c;">@childItem.Name</a></li>
+    background: #e89f65;">@childItem.Name</a></li>
             }
 
         </ul>
