--- a/BlanketShop/Views/User/Register.cshtml
+++ b/BlanketShop/Views/User/Register.cshtml
@@ -8,7 +8,7 @@
 
 @{
     ViewBag.Title = "Đăng ký";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutSeller.cshtml";
 }
 @section jsFooter{
     <script src="/Assets/client/js/controller/userController.js"></script>
