--- a/BlanketShop/Views/User/UserDetail.cshtml
+++ b/BlanketShop/Views/User/UserDetail.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "UserDetail";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutSeller.cshtml";
 }
 
 <div class="content">
