--- a/BlanketShop/Views/Product/Category.cshtml
+++ b/BlanketShop/Views/Product/Category.cshtml
@@ -2,115 +2,36 @@
 @{
     var category = (Model.EF.Categories)ViewBag.Category;
     ViewBag.Title = category.Name;
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutSeller.cshtml";
 }
-<style>
-    .span_1_of_2 {
-        width: 73.22%;
-        /*padding: 1.5%;*/
-    }
-
-    .span_3_of_1 {
-        width: 25.2%;
-        padding: 0%;
-    }
-
-    .rightsidebar {
-        display: block;
-        float: left;
-        margin-left: 1.57%;
-    }
-</style>
 <div class="content">
     <div class="content_top">
         <div class="heading">
-            <h3 style="font-family:sans-serif">@category.Name</h3>
+            <h3>@category.Name</h3>
         </div>
-
+        <div class="see">
+            <p><a href="#"></a></p>
+        </div>
         <div class="clear"></div>
     </div>
     <div class="section group">
-        <div class="cont-desc span_1_of_2">
-            @if (Model.Count > 0)
-            {
-                foreach (var item in Model)
-                {
 
-                    var link = "/chi-tiet/" + item.MetaTitle + "-" + item.ID;
-                    <div class="grid_1_of_4 images_1_of_4" style="width:23%;margin-left:2%;   ">
-                        <a href="@link"><img src="@item.Image" alt="" /></a>
-                        <h2 style="font-family:sans-serif;color: #007FE6;font-weight: bold;padding-top: 5px;font-size: 12px;">@item.Name </h2>
-                        <div class="price-details">
-                            <div class="price-number">
-                                <p style="margin-left: 0%;font-size: 17px;padding: 0.4em 0;color: #333;">
-                                    Giá:
-                                    <span class="rupees" style="font-weight: bold;color: #e6001e;border: dotted 1px;border-left: none;border-right: none;padding: 1px;font-size: 17px;text-decoration: none;">
-                                        @(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ") đ
-                                    </span>
-                                </p>
-                            </div>
-                            <div class="add-cart">
-                                <h4><a href="/them-gio-hang?productId=@item.ID&quantity=1">Thêm vào giỏ</a></h4>
-                            </div>
-                            <div class="clear"></div>
-                        </div>
-
+        @foreach (var item in Model)
+        {
+            var link = "/chi-tiet/" + item.MetaTitle + "-" + item.ID;
+            <div class="grid_1_of_4 images_1_of_4">
+                <a href="@link"><img src="@item.Image" alt="@item.Name" /></a>
+                <h2>@item.Name</h2>
+                <div class="price-details">
+                    <div class="price-number">
+                        <p><span class="rupees">@(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ")đ</span></p>
                     </div>
-                }
-
-                <div class="clear"></div>
-            <!--Phân trang-->
-                @*if (ViewBag.TotalPage > 1)
-                    {
-                        var pageDisplay = (int)ViewBag.MaxPage;
-                        int totalPage = (int)ViewBag.TotalPage;
-                        int currentPage = ((int)ViewBag.Page);
-
-                        // Create numeric links
-                        var startPageIndex = Math.Max(1, currentPage - pageDisplay / 2);
-                        var endPageIndex = Math.Min(totalPage, currentPage + pageDisplay / 2);
-
-                        var link = "/san-pham/" + category.MetaTitle + "-" + category.ID;
-                        <nav>
-                            <ul class="pagination">
-                                @if (currentPage > ViewBag.First)
-                                {
-                                    <li><a href="@link?page=@ViewBag.First" title="Trang đầu" class="first"><i class="fa fa-angle-double-left"></i></a></li>
-                                    <li>
-                                        <a href="@link?page=@ViewBag.Prev" title="Trang trước" class="prev"><i class="fa fa-angle-left"></i></a>
-                                    </li>
-
-                                }
-                                @for (int i = startPageIndex; i <= endPageIndex; i++)
-                                {
-                                    if (currentPage == i)
-                                    {
-
-                                        <li> <a href="@link?page=@i" class="active" title="Trang @i">@i</a></li>
-                                    }
-                                    else
-                                    {
-                                        <li><a href="@link?page=@i" title="Trang @i" class="pos">@i</a></li>
-                                    }
-                                }
-                                @if (currentPage < totalPage)
-                                {
-                                    <li><a href="@link?page=@ViewBag.Next" class="next" title="Trang sau"><i class="fa fa-angle-right"></i></a></li>
-                                    <li> <a href="@link?page=@ViewBag.Last" class="last" title="Trang cuối"><i class="fa fa-angle-double-right"></i></a></li>
-                                }
-
-                            </ul>
-                        </nav>
-
-                    }*@
-            }
-            else
-            {
-                <span style="padding-left:2%;color:red;">Xin lỗi hiện tại chúng tôi đang hết hàng</span>
-            }
-        </div>
-        <div class="rightsidebar span_3_of_1">
-            @{Html.RenderAction("ProductCategory", "Product");}
-        </div>
+                    <div class="add-cart">
+                        <h4><a href="/them-gio-hang?productId=@item.ID&quantity=1">Add to Cart</a></h4>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+            </div>
+        }
     </div>
 </div>
