--- a/BlanketShop/Views/Product/Search.cshtml
+++ b/BlanketShop/Views/Product/Search.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Model.ViewModel.ProductViewModel>
 @{
     ViewBag.Title = "Kết quả tìm kiếm";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutSeller.cshtml";
 }
 <style>
     .span_1_of_2 {
