--- a/BlanketShop/Views/Shared/HeaderCart.cshtml
+++ b/BlanketShop/Views/Shared/HeaderCart.cshtml
@@ -1,22 +1,21 @@
 ﻿<div class="cart">
-    <p>
-        <span style="color:#ff5400;font-size:139%;">Giỏ hàng:</span><div id="dd" class="wrapper-dropdown-2" style="color: #ff5400;">
-            @Model.Count sản phẩm
-            @if (Model.Count > 0)
-            {
-          <ul class="dropdown" style="width: 140px;">
-              <li>
-                  <a href="/gio-hang" style="font-size: 13px;text-decoration-line: none;background: #ebebeb;">Chi tiết giỏ hàng</a>
-              </li>
-             </ul>     
-            }
-            else
-            {
-                <ul class="dropdown">
-                    <li>Bạn không có sản phẩm nào trong giỏ hàng</li>
-                </ul>
-            }
-           
-        </div>
-    </p>
+<p>
+    Welcome to our Online Store! <span>Cart:</span><div id="dd" class="wrapper-dropdown-2">
+        @Model.Count sản phẩm
+        @if (Model.Count > 0)
+        {
+            <ul class="dropdown">
+                <li>
+                    <a href="/gio-hang">Chi tiết giỏ hàng</a>
+                </li>
+            </ul>
+        }
+        else
+        {
+            <ul class="dropdown">
+                <li>Bạn không có sản phẩm nào trong giỏ hàng</li>
+            </ul>
+        }
+    </div>
+</p>
 </div>
