--- a/BlanketShop/Areas/Admin/Views/Orders/Index.cshtml
+++ b/BlanketShop/Areas/Admin/Views/Orders/Index.cshtml
@@ -18,7 +18,7 @@
                     <div class="row form-group">
                         <div class="col-lg-12">
                             <div class="col-md-4">
-                                <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" />
+                                <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" placeholder="Nhập số điện thoại"/>
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-success">Tìm kiếm</button>
@@ -43,6 +43,7 @@
                                 <th>
                                     Email
                                 </th>
+
                                 <th>
                                     Lời nhắn
                                 </th>
@@ -52,7 +53,9 @@
                                 <th>
                                     Trạng thái
                                 </th>
-                                <th></th>
+                                <th>
+                                    Chỉnh sửa
+                                </th>
                             </tr>
                         </thead>
                         <tbody>
