--- a/BlanketShop/Areas/Admin/Views/Orders/Details.cshtml
+++ b/BlanketShop/Areas/Admin/Views/Orders/Details.cshtml
@@ -8,68 +8,62 @@
 @section header{
     Chi tiết hóa đơn
 }
-<div>
-    <h4>Orders</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-        <dd>
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
+    <div class="form-horizontal">
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.ID)
+        <div class="row">
+            <div class="btnSave pull-right">
+                <input type="submit" name="submit" value="Save" class="btn btn-primary" />
+                <a href="~/Admin/Orders" class="btn btn-default">Back</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="pull-left">
+                <h3>Danh sách hóa đơn</h3>
+            </div>
+        </div>
+        <div class="row">
+            <table class="table table-hover table-striped">
+                <thead>
+                    <tr>
+                        <th>Ngày tạo</th>
+                        <th>Tên khách hàng</th>
+                        <th>Màu sắc</th>
+                        <th>Kích cỡ</th>
+                        <th>Xuất xứ</th>
+                        <th>Đơn giá</th>
+                        <th>Tổng tiền</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>Doe</td>
+                        <td>john@example.com</td>
+                        <td>John</td>
+                        <td>Doe</td>
+                        <td>john@example.com</td>
+                        <td>john@example.com</td>
+                    </tr>
+                    <tr>
+                        <td>John</td>
+                        <td>Doe</td>
+                        <td>john@example.com</td>
+                        <td>John</td>
+                        <td>Doe</td>
+                        <td>john@example.com</td>
+                        <td>john@example.com</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+}
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ShipName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ShipName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ShipMobile)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ShipMobile)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ShipAddress)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ShipAddress)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ShipEmail)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ShipEmail)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-
-    </dl>
-</div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Back to List", "Index")
