--- a/BlanketShop/Views/Cart/Index.cshtml
+++ b/BlanketShop/Views/Cart/Index.cshtml
@@ -51,7 +51,7 @@
                         }
                         else
                         {
-                            <span class="alert alert-danger" style="margin-left:1%;">Chưa có sản phẩm nào trong giỏ hàng</span>
+                            <span class="alert alert-info" style="margin-left:1%;">Chưa có sản phẩm nào trong giỏ hàng</span>
                         }
     </div>
     <br />
