--- a/BlanketShop/Views/Cart/Success.cshtml
+++ b/BlanketShop/Views/Cart/Success.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Success";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutSeller.cshtml";
 }
 <div class="alert alert-success">
     Đơn hàng của bạn đã được gửi thành công. Đang chờ Admin kiểm duyệt. 
