--- a/BlanketShop/Views/Contact/Index.cshtml
+++ b/BlanketShop/Views/Contact/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Model.EF.Contact
 @{
     ViewBag.Title = "Liên hệ";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutSeller.cshtml";
 }
 <style>
     #mapCanvas {
