--- a/BlanketShop/Assets/client/css/slider.css
+++ b/BlanketShop/Assets/client/css/slider.css
@@ -41,7 +41,7 @@
  .slide h2{ 
  	font-size:2em;
  	color:#999;
- 	font-family: 'ambleregular';
+ 	font-family: 'sans-serif';
  }
   .slide h2 span{ 
   	color:#CD1F25;
@@ -66,7 +66,7 @@
 	padding-top:5px;
 }
 .features_list h4{	  
-	   font-family: 'ambleregular'; 
+	   font-family: 'sans-serif'; 
 	   font-size:1.2em; 
 	   color:#222;
 }
