--- a/BlanketShop/Assets/client/css/style.css
+++ b/BlanketShop/Assets/client/css/style.css
@@ -29,7 +29,7 @@ nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
 img{max-width:100%;}
 /*end reset*/
 @font-face {
-    font-family: 'ambleregular';
+    font-family: 'sans-serif';
     src:url(../font/Amble-Regular-webfont.ttf) format('truetype');
 }
 body {
@@ -78,7 +78,7 @@ body {
 	font-size:0.823em;
 	color:#9C9C9C;
 	padding:0 10px;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 }
 .account_desc li a:hover{
 	color:#E4292F;
@@ -181,7 +181,7 @@ body {
 	float:left;
 }
 .menu li a {
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-size:0.823em;
 	text-transform:uppercase;
 	color: #fff;
@@ -250,7 +250,7 @@ body {
 	padding:10px;
 	background:#B81D22;
 	text-transform:uppercase;
-	font-family: 'ambleregular';	
+	font-family: 'sans-serif';	
 }
 .categories li a{
 	display:block;
@@ -283,7 +283,7 @@ body {
 	margin-bottom: 0.5em;
 	font-size: 1.5em;
 	line-height: 1.2;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-weight: normal;
 	margin-top: 0px;
 	text-transform: uppercase;
@@ -303,7 +303,7 @@ body {
 	float: left;
 }
 .heading h3 {
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-size:22px;
 	color:#383838;
 	text-transform: uppercase;
@@ -346,7 +346,7 @@ body {
 }
 .images_1_of_4  h2 {
 	color:#6A82A4;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-size:1.1em;
 	font-weight: normal;
 }
@@ -357,7 +357,7 @@ body {
 }
 .images_1_of_4  p span.price {
 	font-size: 18px;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	color:#CC3636;
 }
 .price-details{
@@ -370,7 +370,7 @@ body {
 }
 .price-details p span.rupees{
 	font-size:1.6em;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	color:#383838;
 }
 .add-cart{
@@ -381,7 +381,7 @@ body {
 	font-size:0.9em;
 	display: block;
 	padding:10px 15px;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	background:#CD1F25;
 	color: #FFF;
 	text-decoration: none;
@@ -435,7 +435,7 @@ body {
 	margin-bottom: .5em;
 	font-size: 1.2em;
 	line-height: 1.2;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-weight: normal;
 	margin-top: 0px;
 	letter-spacing: -1px;
@@ -451,12 +451,12 @@ body {
 	font-size: 0.8125em;
 	padding: 0.4em 0;
 	color:#2A5C86;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	display: block;
 }
 .span_1_of_4  li span{
 	font-size:1em;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	color:#2A5C86;
 	cursor:pointer;
 	margin:10px 0;
@@ -489,7 +489,7 @@ body {
 }
 .copy_right p a {
 	color:#DD0F0E;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	text-decoration: underline;
 }
 .copy_right p a:hover {
@@ -537,7 +537,7 @@ body {
 	font-size: 0.9em;
 	padding: 0 1.3%;
 	color: #333;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 }
 .back-links p a:hover, .back-links p a:active {
 	color:#B81D22;
@@ -598,7 +598,7 @@ body {
 	max-width: 100%;
 }
 .span_3_of_2  h2 {
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-size: 1.1em;
 	color:#CD1F25;
 	font-weight: normal;
@@ -620,7 +620,7 @@ body {
 }
 .price p span {
 	font-size:3em;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	color:#CD1F25;;
 }
 .available {
@@ -678,7 +678,7 @@ body {
 .wish-list li a{
 	color: #383838;
 	font-size:1em;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	padding-left:22px;
 	text-decoration: underline;
 }
@@ -743,7 +743,7 @@ body {
 .product-tags .button a {
 	font-size:1em;
 	padding:10px 15px;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	background:#CD1F25;
 	color: #FFF;
 	text-decoration: none;
@@ -767,7 +767,7 @@ body {
 .review h4,.review h4 a{
  font-size:1.2em;
  color: #333;
- font-family: 'ambleregular';
+ font-family: 'sans-serif';
 }
 .review h4 a{
 	text-decoration:underline;
@@ -781,7 +781,7 @@ body {
 }
 .review li{
 	display:block;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	padding:8px 0;
 	color: #666;
 	font-size:1em;
@@ -799,7 +799,7 @@ body {
 .your-review h3{
 	font-size:1.2em;
     color: #333;
-    font-family: 'ambleregular';
+    font-family: 'sans-serif';
 }
 .your-review div{
 	padding:5px 0;
@@ -834,7 +834,7 @@ body {
 .your-review input[type="submit"]{
     font-size:1em;
 	padding:10px 15px;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	background:#CD1F25;
 	color: #FFF;
 	text-decoration: none;
@@ -855,7 +855,7 @@ body {
 	padding:8px 0 8px 20px;
 	color: #666;
 	display: block;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	background: url(../images/drop_arrow.png) no-repeat 0;
 	border-bottom:1px solid #F0F0F0;
 }
@@ -989,7 +989,7 @@ body {
 	margin-bottom: 0.5em;
 	font-size: 1.5em;
 	line-height: 1.2;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-weight: normal;
 	margin-top: 0px;
 	text-transform: uppercase;
@@ -1065,7 +1065,7 @@ body {
 	color:#383838;
 	font-size: 1em;
 	margin:5px 0;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	text-transform: uppercase;
 }
 .images_1_of_3  p  {
@@ -1081,7 +1081,7 @@ body {
 #posts .tab .post-title{
 	color:#B81D22;
 	font-size:1em;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	overflow:hidden;
 	margin:0px;
 }
@@ -1142,7 +1142,7 @@ body {
 	margin-bottom:0.3em;
 	font-size:1.2em;
 	text-transform:uppercase;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 }
 .news_desc h4 span a{
 	text-decoration:underline;
@@ -1234,7 +1234,7 @@ body {
 .span_2_of_3  h2, .span_1_of_3  h2 {
 	margin-bottom: 0.5em;
 	line-height: 1.2;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-weight: normal;
 	margin-top: 0px;
 }
@@ -1272,7 +1272,7 @@ body {
 .contact-form input[type="submit"] {
 	font-size:1em;
 	padding:10px 15px;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	background:#CD1F25;
 	color: #FFF;
 	border:none;
