--- a/BlanketShop/Assets/clientSeller/css/easy-responsive-tabs.css
+++ b/BlanketShop/Assets/clientSeller/css/easy-responsive-tabs.css
@@ -3,7 +3,7 @@
 	margin-top:30px;
 }
 .resp-tabs-list li {
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-size:1em;
 	color:#333;;
 	text-transform: uppercase;
