--- a/BlanketShop/Assets/clientSeller/css/style.css
+++ b/BlanketShop/Assets/clientSeller/css/style.css
@@ -29,7 +29,7 @@ nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
 img{max-width:100%;}
 /*end reset*/
 @font-face {
-    font-family: 'ambleregular';
+    font-family: 'sans-serif';
     src:url(../font/Amble-Regular-webfont.ttf) format('truetype');
 }
 body {
@@ -78,7 +78,7 @@ body {
 	font-size:0.823em;
 	color:#9C9C9C;
 	padding:0 10px;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 }
 .account_desc li a:hover{
 	color:#E4292F;
@@ -181,7 +181,7 @@ body {
 	float:left;
 }
 .menu li a {
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-size:0.823em;
 	text-transform:uppercase;
 	color: #fff;
@@ -196,6 +196,7 @@ body {
 }
 .menu li a:hover,.menu li.active a{
 	background:#B81D22;
+    font-family:sans-serif
 }
 .menu li:first-child  a{
 	border-radius:6px 0 0 6px;
@@ -250,14 +251,14 @@ body {
 	padding:10px;
 	background:#B81D22;
 	text-transform:uppercase;
-	font-family: 'ambleregular';	
+	font-family: 'sans-serif';	
 }
 .categories li a{
 	display:block;
 	font-size:0.8em;
 	padding:8px 15px;
     color: #9C9C9C;
-    font-family: 'ambleregular';
+    font-family: 'sans-serif';
     margin:0 20px;
     background:url(../images/drop_arrow.png) no-repeat 0;
     border-bottom: 1px solid #EEE;
@@ -284,7 +285,7 @@ body {
 	margin-bottom: 0.5em;
 	font-size: 1.5em;
 	line-height: 1.2;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-weight: normal;
 	margin-top: 0px;
 	text-transform: uppercase;
@@ -304,7 +305,7 @@ body {
 	float: left;
 }
 .heading h3 {
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-size:22px;
 	color:#383838;
 	text-transform: uppercase;
@@ -347,7 +348,7 @@ body {
 }
 .images_1_of_4  h2 {
 	color:#6A82A4;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-size:1.1em;
 	font-weight: normal;
 }
@@ -358,7 +359,7 @@ body {
 }
 .images_1_of_4  p span.price {
 	font-size: 18px;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	color:#CC3636;
 }
 .price-details{
@@ -371,7 +372,7 @@ body {
 }
 .price-details p span.rupees{
 	font-size:1.6em;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	color:#383838;
 }
 .add-cart{
@@ -382,7 +383,7 @@ body {
 	font-size:0.9em;
 	display: block;
 	padding:10px 15px;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	background:#CD1F25;
 	color: #FFF;
 	text-decoration: none;
@@ -436,7 +437,7 @@ body {
 	margin-bottom: .5em;
 	font-size: 1.2em;
 	line-height: 1.2;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-weight: normal;
 	margin-top: 0px;
 	letter-spacing: -1px;
@@ -452,12 +453,12 @@ body {
 	font-size: 0.8125em;
 	padding: 0.4em 0;
 	color:#2A5C86;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	display: block;
 }
 .span_1_of_4  li span{
 	font-size:1em;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	color:#2A5C86;
 	cursor:pointer;
 	margin:10px 0;
@@ -490,7 +491,7 @@ body {
 }
 .copy_right p a {
 	color:#DD0F0E;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	text-decoration: underline;
 }
 .copy_right p a:hover {
@@ -538,7 +539,7 @@ body {
 	font-size: 0.9em;
 	padding: 0 1.3%;
 	color: #333;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 }
 .back-links p a:hover, .back-links p a:active {
 	color:#B81D22;
@@ -600,7 +601,7 @@ body {
 	max-width: 100%;
 }
 .span_3_of_2  h2 {
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-size: 1.1em;
 	color:#CD1F25;
 	font-weight: normal;
@@ -622,7 +623,7 @@ body {
 }
 .price p span {
 	font-size:3em;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	color:#CD1F25;;
 }
 .available {
@@ -680,7 +681,7 @@ body {
 .wish-list li a{
 	color: #383838;
 	font-size:1em;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	padding-left:22px;
 	text-decoration: underline;
 }
@@ -745,7 +746,7 @@ body {
 .product-tags .button a {
 	font-size:1em;
 	padding:10px 15px;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	background:#CD1F25;
 	color: #FFF;
 	text-decoration: none;
@@ -769,7 +770,7 @@ body {
 .review h4,.review h4 a{
  font-size:1.2em;
  color: #333;
- font-family: 'ambleregular';
+ font-family: 'sans-serif';
 }
 .review h4 a{
 	text-decoration:underline;
@@ -783,7 +784,7 @@ body {
 }
 .review li{
 	display:block;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	padding:8px 0;
 	color: #666;
 	font-size:1em;
@@ -801,7 +802,7 @@ body {
 .your-review h3{
 	font-size:1.2em;
     color: #333;
-    font-family: 'ambleregular';
+    font-family: 'sans-serif';
 }
 .your-review div{
 	padding:5px 0;
@@ -836,7 +837,7 @@ body {
 .your-review input[type="submit"]{
     font-size:1em;
 	padding:10px 15px;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	background:#CD1F25;
 	color: #FFF;
 	text-decoration: none;
@@ -857,7 +858,7 @@ body {
 	padding:8px 0 8px 20px;
 	color: #666;
 	display: block;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	background: url(../images/drop_arrow.png) no-repeat 0;
 	border-bottom:1px solid #F0F0F0;
 }
@@ -991,7 +992,7 @@ body {
 	margin-bottom: 0.5em;
 	font-size: 1.5em;
 	line-height: 1.2;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-weight: normal;
 	margin-top: 0px;
 	text-transform: uppercase;
@@ -1067,7 +1068,7 @@ body {
 	color:#383838;
 	font-size: 1em;
 	margin:5px 0;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	text-transform: uppercase;
 }
 .images_1_of_3  p  {
@@ -1083,7 +1084,7 @@ body {
 #posts .tab .post-title{
 	color:#B81D22;
 	font-size:1em;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	overflow:hidden;
 	margin:0px;
 }
@@ -1144,7 +1145,7 @@ body {
 	margin-bottom:0.3em;
 	font-size:1.2em;
 	text-transform:uppercase;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 }
 .news_desc h4 span a{
 	text-decoration:underline;
@@ -1236,7 +1237,7 @@ body {
 .span_2_of_3  h2, .span_1_of_3  h2 {
 	margin-bottom: 0.5em;
 	line-height: 1.2;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	font-weight: normal;
 	margin-top: 0px;
 }
@@ -1274,7 +1275,7 @@ body {
 .contact-form input[type="submit"] {
 	font-size:1em;
 	padding:10px 15px;
-	font-family: 'ambleregular';
+	font-family: 'sans-serif';
 	background:#CD1F25;
 	color: #FFF;
 	border:none;
