--- a/BlanketShop/Views/About/Index.cshtml
+++ b/BlanketShop/Views/About/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Giới thiệu";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutSeller.cshtml";
 }
 <div class="main">
     <div class="content">
