--- a/BlanketShop/Views/Home/Index.cshtml
+++ b/BlanketShop/Views/Home/Index.cshtml
@@ -9,10 +9,10 @@
 <div class="content">
     <div class="content_top">
         <div class="heading">
-            <h3>Sản phẩm mới</h3>
+            <h3 style="font-family:sans-serif">Sản phẩm mới</h3>
         </div>
         <div class="see">
-            <p><a href="#">See all Products</a></p>
+            <p></p>
         </div>
         <div class="clear"></div>
     </div>
@@ -23,13 +23,13 @@
             var url = "/chi-tiet/" + item.MetaTitle + "-" + item.ID;
             <div class="grid_1_of_4 images_1_of_4">
                 <a href="@url"><img src="@item.Image" alt="@item.Name" /></a>
-                <h2>@item.Name</h2>
+                <h2 style="font-family:sans-serif;text-transform:none" >@item.Name</h2>
                 <div class="price-details">
                     <div class="price-number">
                         <p><span class="rupees">@(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ")đ</span></p>
                     </div>
                     <div class="add-cart">
-                        <h4><a href="/them-gio-hang?productId=@item.ID&quantity=1">Add to Cart</a></h4>
+                        <h4><a href="/them-gio-hang?productId=@item.ID&quantity=1">Thêm vào giỏ</a></h4>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -39,10 +39,10 @@
     </div>
     <div class="content_bottom">
         <div class="heading">
-            <h3>Sản phẩm nổi bật</h3>
+            <h3 style="font-family:sans-serif">Sản phẩm nổi bật</h3>
         </div>
         <div class="see">
-            <p><a href="#">See all Products</a></p>
+            <p></p>
         </div>
         <div class="clear"></div>
     </div>
@@ -52,13 +52,13 @@
             var url = "/chi-tiet/" + item.MetaTitle + "-" + item.ID;
             <div class="grid_1_of_4 images_1_of_4">
                 <a href="@url"><img src="@item.Image" alt="@item.Name" /></a>
-                <h2>@item.Name</h2>
+                <h2 style="font-family:sans-serif;text-transform:none" >@item.Name</h2>
                 <div class="price-details">
                     <div class="price-number">
                         <p><span class="rupees">@(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ") đ</span></p>
                     </div>
                     <div class="add-cart">
-                        <h4><a href="/them-gio-hang?productId=@item.ID&quantity=1">Add to Cart</a></h4>
+                        <h4><a href="/them-gio-hang?productId=@item.ID&quantity=1">Thêm vào giỏ</a></h4>
                     </div>
                     <div class="clear"></div>
                 </div>
