--- a/BlanketShop/Views/Product/Category.cshtml
+++ b/BlanketShop/Views/Product/Category.cshtml
@@ -7,7 +7,7 @@
 <div class="content">
     <div class="content_top">
         <div class="heading">
-            <h3>@category.Name</h3>
+            <h3 style="font-family:sans-serif">@category.Name</h3>
         </div>
         <div class="see">
             <p><a href="#"></a></p>
@@ -21,13 +21,13 @@
             var link = "/chi-tiet/" + item.MetaTitle + "-" + item.ID;
             <div class="grid_1_of_4 images_1_of_4">
                 <a href="@link"><img src="@item.Image" alt="@item.Name" /></a>
-                <h2>@item.Name</h2>
+                <h2 style="font-family:sans-serif; text-transform:none">@item.Name</h2>
                 <div class="price-details">
                     <div class="price-number">
                         <p><span class="rupees">@(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ")đ</span></p>
                     </div>
                     <div class="add-cart">
-                        <h4><a href="/them-gio-hang?productId=@item.ID&quantity=1">Add to Cart</a></h4>
+                        <h4><a href="/them-gio-hang?productId=@item.ID&quantity=1">Thêm vào giỏ</a></h4>
                     </div>
                     <div class="clear"></div>
                 </div>
