--- a/BlanketShop/Views/Product/Detail.cshtml
+++ b/BlanketShop/Views/Product/Detail.cshtml
@@ -215,7 +215,7 @@
                     <div class="share-desc">
                         <div class="share">
                         </div>
-                        <div class="button"><span><a href="/them-gio-hang?productId=@Model.ID&quantity=1">Add to Cart</a></span></div>
+                        <div class="button"><span><a href="/them-gio-hang?productId=@Model.ID&quantity=1">Thêm vào giỏ</a></span></div>
                         <div class="clear"></div>
                     </div>
                 </div>
@@ -224,7 +224,7 @@
             <div class="product_desc">
                 <div id="horizontalTab">
                     <ul class="resp-tabs-list">
-                        <li>Product Details</li>
+                        <li style="font-family:sans-serif">Thông tin chi tiết</li>
                         @*<li>product Tags</li>
                         <li>Product Reviews</li>*@
                         <div class="clear"></div>
@@ -285,10 +285,10 @@
             </script>
             <div class="content_bottom">
                 <div class="heading">
-                    <h3>Related Products</h3>
+                    <h3 style="font-family:sans-serif">Sản phẩm liên quan</h3>
                 </div>
                 <div class="see">
-                    <p><a href="#">See all Products</a></p>
+                    <p></p>
                 </div>
                 <div class="clear"></div>
             </div>
@@ -300,7 +300,7 @@
                         <a href="@url"><img src="@item.Image" alt=""></a>
                         <div class="price" style="border:none">
                             <div class="add-cart" style="float:none">
-                                <h4><a href="/them-gio-hang?productId=@item.ID&quantity=1">Add to Cart</a></h4>
+                                <h4><a href="/them-gio-hang?productId=@item.ID&quantity=1">Thêm vào giỏ</a></h4>
                             </div>
                             <div class="clear"></div>
                         </div>
