--- a/BlanketShop/Views/Shared/HeaderCart.cshtml
+++ b/BlanketShop/Views/Shared/HeaderCart.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="cart">
 <p>
-    Welcome to our Online Store! <span>Cart:</span><div id="dd" class="wrapper-dropdown-2">
+   Chào mừng bạn đến với giỏ hàng! <span>:</span><div id="dd" class="wrapper-dropdown-2">
         @Model.Count sản phẩm
         @if (Model.Count > 0)
         {
