--- a/BlanketShop/Views/Shared/TopMenu.cshtml
+++ b/BlanketShop/Views/Shared/TopMenu.cshtml
@@ -33,7 +33,7 @@
     <div class="clear"></div>*@
 
 <div class="call">
-    <p><span>Need help?</span> call us <span class="number">1-22-3456789</span></span></p>
+    <p><span>Nếu cần </span>hãy gọi cho chúng tôi <span class="number">0985.254.152</span></span></p>
 </div>
 <div class="account_desc">
     @{
@@ -44,7 +44,7 @@
         <ul>
             @foreach (var item in Model)
             {
-                <li><a href="@item.Link" target="@item.Target">@item.Text</a></li>
+                <li><a style="font-family:sans-serif" href="@item.Link" target="@item.Target">@item.Text</a></li>
             }
         </ul>
     }
