--- a/BlanketShop/Views/Shared/_LayoutSeller.cshtml
+++ b/BlanketShop/Views/Shared/_LayoutSeller.cshtml
@@ -6,13 +6,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE HTML>
 <head>
-    <title>Free Home Shoppe Website Template | Home :: w3layouts</title>
+    <title>Cửa hàng đệm Hoa Thuyết</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link href="/Assets/client/css/bootstrap.css" rel="stylesheet" />
     <link href="/Assets/client/css/boostrap-social.css" rel="stylesheet" />
-    <link href="/Assets/client/css/font-awesome.min.css" rel="stylesheet" />
     <link href="/Assets/client/css/bootstrap-theme.css" rel="stylesheet" />
 
     <link href="/Assets/client/css/jquery-ui.css" rel="stylesheet" />
@@ -37,7 +36,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             </div>
             <div class="header_top">
                 <div class="logo">
-                    <a href="index.html"><img src="~/Assets/clientSeller/images/logo.png" alt="" /></a>
+                    <a href="/"><img src="~/Assets/clientSeller/images/logo.png" alt="" /></a>
                 </div>
                 @{Html.RenderAction("HeaderCart", "Home");}
                 <script type="text/javascript">
@@ -93,45 +92,48 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div id="slide-1" class="slide">
                                     <div class="slider-img">
                                         <a href="preview.html">
-                                            <img src="~/Assets/clientSeller/images/slide-1-image.png" alt="learn more" />
-                                            @*<img src="~/Assets/clientSeller/~/Assets/clientSeller/images/slide-1-image.png" />*@
+                                            <img src="~/Assets/clientSeller/images/img1.jpg" />
                                         </a>
                                     </div>
                                     <div class="slider-text">
-                                        <h1>Clearance<br><span>SALE</span></h1>
-                                        <h2>UPTo 20% OFF</h2>
+                                        <h1><br><span style="font-size:40px">CỬA HÀNG ĐỆM</span></h1>
+                                        <h2>Hoa Thuyết</h2>
                                         <div class="features_list">
-                                            <h4>Get to Know More About Our Memorable Services Lorem Ipsum is simply dummy text</h4>
+                                            <h4>Nơi giúp bạn có một giấc ngủ ngon</h4>
                                         </div>
-                                        <a href="preview.html" class="button">Shop Now</a>
+                                        <a href="/" class="button">Mua ngay</a>
                                     </div>
                                     <div class="clear"></div>
                                 </div>
-                                <div class="slide">
+                                <div class="slide" style="margin-left: 10px">
                                     <div class="slider-text">
-                                        <h1>Clearance<br><span>SALE</span></h1>
-                                        <h2>UPTo 40% OFF</h2>
+                                        <h1><br><span style="font-size:40px">CỬA HÀNG ĐỆM</span></h1>
+                                        <h2>Hoa thuyết</h2>
                                         <div class="features_list">
-                                            <h4>Get to Know More About Our Memorable Services</h4>
+                                            <h4>Nơi giúp bạn có một giấc ngủ ngon</h4>
                                         </div>
-                                        <a href="preview.html" class="button">Shop Now</a>
+                                        <a href="/" class="button">Mua ngay</a>
                                     </div>
                                     <div class="slider-img">
-                                        <a href="preview.html"><img src="~/Assets/clientSeller/images/slide-3-image.jpg" alt="learn more" /></a>
+                                        <a href="preview.html">
+                                            <img src="~/Assets/clientSeller/images/1feb820e8f7ca59957e7e08dd732ffea.jpg" />
+                                        </a>
                                     </div>
                                     <div class="clear"></div>
                                 </div>
-                                <div class="slide">
+                                <div class="slide"  style="margin-left: 110px" >
                                     <div class="slider-img">
-                                        <a href="preview.html"><img src="~/Assets/clientSeller/images/slide-2-image.jpg" alt="learn more" /></a>
+                                        <a href="/">
+                                            <img src="~/Assets/clientSeller/images/1b1ddf8a81e3479b3db20735ee0729ab.jpg" />
+                                        </a>
                                     </div>
                                     <div class="slider-text">
-                                        <h1>Clearance<br><span>SALE</span></h1>
-                                        <h2>UPTo 10% OFF</h2>
+                                        <h1><br><span style="font-size:40px">CỬA HÀNG ĐỆM</span></h1>
+                                        <h2>Hoa Thuyết</h2>
                                         <div class="features_list">
-                                            <h4>Get to Know More About Our Memorable Services Lorem Ipsum is simply dummy text</h4>
+                                            <h4>Nơi giúp bạn có một giấc ngủ ngon</h4>
                                         </div>
-                                        <a href="preview.html" class="button">Shop Now</a>
+                                        <a href="preview.html" class="button">Mua ngay</a>
                                     </div>
                                     <div class="clear"></div>
                                 </div>
@@ -153,31 +155,31 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col_1_of_4 span_1_of_4">
                     <h4>Information</h4>
                     <ul>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="contact.html">Customer Service</a></li>
-                        <li><a href="#">Advanced Search</a></li>
-                        <li><a href="delivery.html">Orders and Returns</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="/">About Us</a></li>
+                        <li><a href="/">Customer Service</a></li>
+                        <li><a href="/">Advanced Search</a></li>
+                        <li><a href="/">Orders and Returns</a></li>
+                        <li><a href="/">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col_1_of_4 span_1_of_4">
                     <h4>Why buy from us</h4>
                     <ul>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="contact.html">Customer Service</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="contact.html">Site Map</a></li>
-                        <li><a href="#">Search Terms</a></li>
+                        <li><a href="/">About Us</a></li>
+                        <li><a href="/">Customer Service</a></li>
+                        <li><a href="/">Privacy Policy</a></li>
+                        <li><a href="/">Site Map</a></li>
+                        <li><a href="/">Search Terms</a></li>
                     </ul>
                 </div>
                 <div class="col_1_of_4 span_1_of_4">
                     <h4>My account</h4>
                     <ul>
-                        <li><a href="contact.html">Sign In</a></li>
-                        <li><a href="index.html">View Cart</a></li>
-                        <li><a href="#">My Wishlist</a></li>
-                        <li><a href="#">Track My Order</a></li>
-                        <li><a href="contact.html">Help</a></li>
+                        <li><a href="/">Sign In</a></li>
+                        <li><a href="/">View Cart</a></li>
+                        <li><a href="/">My Wishlist</a></li>
+                        <li><a href="/">Track My Order</a></li>
+                        <li><a href="/">Help</a></li>
                     </ul>
                 </div>
                 <div class="col_1_of_4 span_1_of_4">
@@ -199,9 +201,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="copy_right">
-            <p>&copy; 2013 home_shoppe. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
         </div>
     </div>
     <script type="text/javascript">
